# ina-project

./: .gitignore  README.md  pyproject.toml
code/: analyze_pip.ipynb  create_graph.py  id_to_name.ipynb  igraph_test.ipynb  pypi-metadata.py  rust_export.ipynb
code/analysis/: basic_analysis.ipynb  basic_analysis.py  community_vulns.py  results.csv  vulnerability_analysis.ipynb  vulnerability_analysis.py
code/network_creation/: fix_pajek_igraph.py  process.sh  to_graphml.py  to_lcc.py
code/network_creation/crates_io/: rust_export.ipynb
code/network_creation/npm/: npm_graph_create.ipynb
code/network_creation/pip/: create_graph.py  get_pypi_downloads.ipynb  pypi-metadata.py
code/results/: basic_analysis.csv  basic_analysis_lcc.csv  communities_cargo.txt  communities_npm.txt  communities_pypi.txt  vulnerability_metrics_cargo.csv  vulnerability_metrics_npm.csv  vulnerability_metrics_npm_prod.csv  vulnerability_metrics_pypi.csv
code/vulnerability/: cargo.csv  cargo_grouped.csv  npm.csv  npm_grouped.csv  parse.ipynb  prettygraphs.ipynb  pypi.csv  pypi_grouped.csv
data/: README.md
networks/: .gitignore  README.md  fix_pajek_igraph.py
preprocessing/: npm_graph_create.ipynb
report/: bibliography.bib  pnas-report.cls  report.tex
report/omingraffle/: topdown.graffle
