[tool.poetry]
name = "ina-project"
version = "0.1.0"
description = "Our INA final project. Analysis of different code dependicies networks."
authors = ["Ziga Trcek", "Matej Urbas", "Jan Vasiljevic"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
tqdm = "^4.66.2"
joblib = "^1.3.2"
scipy = "^1.12.0"
jinja2 = "^3.1.3"
cdlib = "^0.3.0"
leidenalg = "^0.10.2"
numpy = "^1.26.4"
python-igraph = "^0.11.4"
wurlitzer = "^3.0.3"
infomap = "^2.7.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
